# ctc_beam_search_decoder

./: CMakeLists.txt  README.md
cpp_demo/: ctc_decoder_demo.cpp  ctc_decoder_demo_batch_first.cpp
python_demo/: ctc_beam_seach_decoder_pywraper.py  ctc_decoder_demo.py
src/: ctc_beam_entry.h  ctc_beam_scorer.h  ctc_beam_search.h  ctc_beam_search_decoder.cpp  ctc_beam_search_decoder.h  ctc_decoder.h  ctc_math.h  macros.h  top_n.h
